--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,3 @@
-name = "hello-worker"
-   main = "/index.js"
+name = "workerndjdj"
+   main = "workerndjdj/index.js"
    compatibility_date = "2025-05-04"
